fix: clickable links behind pseudo element

--- a/src/assets/sass/components/program-element.scss
+++ b/src/assets/sass/components/program-element.scss
@@ -102,6 +102,7 @@
             &::before {
                 .is-open & {
                     opacity: 0;
+                    pointer-events: none;
                 }
                 transition: opacity .1s ease;
                 content: "";
